Create a test that creates html dom elements and places them on the page

--- a/test/test.html
+++ b/test/test.html
@@ -2,13 +2,13 @@
 <html>
   <head>
     <title>ADT-HTML.JS &mdash; tests</title>
-    <script src='../dist/adt.js'></script>
+    <script src='../support/adt.js'></script>
     <script src='../dist/adt-html.js'></script>
   </head>
   <body>
     <h1 class='page-title'>ADT-HTML.JS &mdash; tests</h1>
     <textarea class='reactive-source'></textarea>
-    <textarea class='reactive-result' placeholder="Result..."></textarea>
+    <div class='reactive-result'></div>
 
     <!-- Implementation -->
     <script>
