--- a/test/test.html
+++ b/test/test.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>ADT-HTML.JS &mdash; tests</title>
-    <script src='../support/adt.js'></script>
+    <script src='./support/adt.js'></script>
     <script src='../dist/adt-html.js'></script>
   </head>
   <body>
