Added a composed constructor/evaluator for convenience (relies on adt-util.js that is yet to be written)

--- a/test/test.html
+++ b/test/test.html
@@ -3,6 +3,7 @@
   <head>
     <title>ADT-HTML.JS &mdash; tests</title>
     <script src='./support/adt.js'></script>
+    <script src='./support/adt-util.js'></script>
     <script src='../dist/adt-html.js'></script>
   </head>
   <body>
