--- a/test/test.html
+++ b/test/test.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>ADT-HTML.JS &mdash; tests</title>
-    <script src='./support/adt.js'></script>
-    <script src='./support/adt-util.js'></script>
+    <script src='./lib/adt.js'></script>
+    <script src='./lib/adt-util.js'></script>
     <script src='../dist/adt-html.js'></script>
   </head>
   <body>
